# SudokuTools

./: .gitignore  Cargo.toml  LICENSE.md  Readme.md  solver.py
gui/: Readme.md  simple_sudoku_gui.pb  simple_sudoku_gui.pbp
img_extract/: CMakeLists.txt  Readme.md  image_extract.cpp  image_extract.h
img_extract/classifier/: Readme.md  classifier.cpp  classifier.h  torch_mnist_train.py
solver/: Cargo.toml  Readme.md  sudoku_solver.py  test_sudoku_solver.py
solver/python/: Readme.md  solver.py  test_solver.py
solver/src/: main.rs  solver.rs
solver/src/solver/: varisat_solver.rs
svg_gen/: Readme.md  svg_gen.py
test_files/: sudoku02.csv  sudoku03.csv
